@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150110"
-#define public MagickPackageReleaseDate "snapshot-20150110"
+#define public MagickPackageVersionAddendum ".020150111"
+#define public MagickPackageReleaseDate "snapshot-20150111"
