@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-01-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/sun.c (ReadSUNImage): There is no definition for Sun map
+type RMT_RAW so it can not be supported.  Update DirectClass
+pixels directly rather using SyncImage().  Problem was reported by
+Jodie Cunningham.</li>
+</ul>
+</blockquote>
 <p>2015-01-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
